# sufe-cli

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  example.md  justfile  lefthook.yml  pyproject.toml
.agents/skills/sufe-base/: SKILL.md
.agents/skills/sufe-canvas/: SKILL.md
.agents/skills/sufe-lclibrary/: SKILL.md
.agents/skills/sufe-score/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: skills.md
scripts/: update_version.py
skills/sufe-base/: SKILL.md
skills/sufe-canvas/: SKILL.md
skills/sufe-lclibrary/: SKILL.md
skills/sufe-score/: SKILL.md
src/sufe_cli/: __init__.py  cli.py  cli_helpers.py  config.py  errors.py  runtime.py  skills_manager.py
src/sufe_cli/client/: __init__.py  auth_config.py  auto_login.py  browser.py  captcha_solver.py  http.py  network.py  portal.py  session.py  state.py
src/sufe_cli/client/auth/: __init__.py  auto_login.py  browser.py
src/sufe_cli/commands/: __init__.py  auth.py  config.py  lclibrary.py
src/sufe_cli/commands/canvas/: __init__.py  assignment.py  client.py  course.py  file.py  utils.py
src/sufe_cli/commands/lclibrary/: __init__.py  client.py  facilities.py  multimedia.py  silentcabin.py  teamlab.py  utils.py
src/sufe_cli/commands/score/: __init__.py  commands.py  fetcher.py  list_cmd.py  summary.py  utils.py
src/sufe_cli/utils/: __init__.py  env.py  network.py  token.py
tests/: test_cli_auth.py  test_cli_doctor.py  test_cli_install.py  test_skills_manager.py
tests/client/: test_auth_config.py  test_auto_login_helpers.py  test_captcha_solver.py  test_http.py  test_portal.py  test_session.py  test_state.py
tests/commands/: test_cli_doctor.py
tests/commands/canvas/: test_assignment.py  test_client.py  test_course.py  test_detail.py  test_file.py  test_submit.py
tests/commands/lclibrary/: test_client.py  test_utils.py
tests/commands/score/: test_utils.py
