[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sufe-cli"
dynamic = ["version"]
description = "Sufe CLI"
readme = "README.md"
authors = [
    { name = "jiale.cheng", email = "cjl3473383542@163.com" }
]
requires-python = ">=3.12"
dependencies = [
    "playwright>=1.59.0",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "typer>=0.24.1",
]

[tool.hatch.version]
path = "src/sufe_cli/__init__.py"

[project.scripts]
sufe = "sufe_cli.cli:app"
