[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sufe-cli"
dynamic = ["version"]
description = "上海财经大学（SUFE）网页系统命令行交互工具"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "jiale.cheng", email = "cjl3473383542@163.com" }
]
requires-python = ">=3.12"
keywords = ["sufe", "cli", "automation", "shufe", "playwright"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "opencv-python-headless>=4.13.0.92",
    "playwright>=1.59.0",
    "pydantic>=2.12.5",
    "requests>=2.33.1",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "time-machine>=3.2.0",
    "types-requests>=2.33.0.20260408",
]

[tool.hatch.version]
path = "src/sufe_cli/__init__.py"

[project.scripts]
sufe = "sufe_cli.cli:app"

[tool.ruff]
line-length = 120
target-version = "py312"

[project.urls]
Homepage = "https://github.com/ChengJiale150/sufe-cli"
Repository = "https://github.com/ChengJiale150/sufe-cli.git"
"Bug Tracker" = "https://github.com/ChengJiale150/sufe-cli/issues"
